# AntBattle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Python/: Broker.py  Logger.py  README.md  Test_cases.ini  Tester.py  broker.ini
Python/src/: Broker.py  Displayer.py  Logger.py  Test_cases.ini  Tester.py  broker.ini
cmake/: UsefulMacros.cmake
documents/: battlelog_example.json  Рабочий концеп 'Муравьи'.doc
src/: CMakeLists.txt
src/Ant/: CMakeLists.txt
src/Ant/include/: Ant.h  AntQueen.h  AntSolder.h  AntWorker.h  BlackAntQueen.h  BlackAntSolder.h  BlackAntWorker.h  BlackWorker.h
src/Ant/src/: Ant.cpp  AntQueen.cpp  AntSolder.cpp  AntWorker.cpp  BlackAntQueen.cpp  BlackAntSolder.cpp  BlackAntWorker.cpp  BlackSolder.cpp  BlackWorker.cpp
src/BattleLog/: CMakeLists.txt
src/BattleLog/BattleLogService/: CMakeLists.txt
src/BattleLog/BattleLogService/include/: BattleLogService.h
src/BattleLog/BattleLogService/src/: BattleLogService.cpp
src/BattleLog/FileProvider/: CMakeLists.txt
src/BattleLog/FileProvider/include/: FileProvider.h
src/BattleLog/FileProvider/src/: FileProvider.cpp
src/BattleLog/IBattleLog/: CMakeLists.txt
src/BattleLog/IBattleLog/include/: IBattleLog.h
src/BattleLog/IBattleLogProvider/: CMakeLists.txt
src/BattleLog/IBattleLogProvider/include/: IBattleLogProvider.h
src/BattleLog/TextScreenProvider/: CMakeLists.txt
src/BattleLog/TextScreenProvider/include/: TextScreenProvider.h
src/BattleLog/TextScreenProvider/src/: TextScreenProvider.cpp
src/Core/: CMakeLists.txt
src/Core/include/: AntProvider.h  Battle.h  Cell.h  Config.h  Map.h  Math.h  Position.h
src/Core/src/: AntProvider.cpp  Battle.cpp  Cell.cpp  Config.cpp  Map.cpp  Math.cpp  Position.cpp
src/Core/tests/: CMakeLists.txt  main.cpp  test_nearavalibleposition.conf
src/Interface/: AntInfo.h  ApiVersion.h  Command.h  CommandInfo.h  Direction.h  Functions.h  PlayerInfo.h
src/Log/: CMakeLists.txt
src/Log/include/: Log.h  export.h
src/Log/src/: Log.cpp
src/Player/: CMakeLists.txt
src/Player/include/: Player.h  Player.h.autosave
src/Player/src/: Player.cpp
src/Server/: 1.1  CMakeLists.txt  stone.template  test.conf  test_battle.json
src/Server/src/: main.cpp
src/TestLibrary/: CMakeLists.txt
src/TestLibrary/include/: export.h
src/TestLibrary/src/: main.cpp
src/catchtest/: catch.hpp
